# mongo-cxx-driver

./: .coveralls.yml  .gitattributes  .gitignore  .mci.yml  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  SConstruct
site_scons/site_tools/: integration_test.py
src/: CMakeLists.txt  SConscript.client
src/bson/document/: view.cpp  view.hpp
src/driver/base/: bulk_write.cpp  bulk_write.hpp  client.cpp  client.hpp  collection.cpp  collection.hpp  cursor.cpp  cursor.hpp  database.cpp  database.hpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  read_preference.cpp  read_preference.hpp  uri.cpp  uri.hpp  write_concern.cpp  write_concern.hpp  write_type.hpp
src/driver/exception/: exceptions.hpp
src/driver/model/: delete_many.cpp  delete_many.hpp  delete_one.cpp  delete_one.hpp  insert_one.cpp  insert_one.hpp  replace_one.cpp  replace_one.hpp  update_many.cpp  update_many.hpp  update_one.cpp  update_one.hpp  write.cpp  write.hpp
src/driver/options/: aggregate.cpp  aggregate.hpp  bulk_write.cpp  bulk_write.hpp  client.cpp  client.hpp  count.cpp  count.hpp  delete.cpp  delete.hpp  distinct.cpp  distinct.hpp  find.cpp  find.hpp  find_one_and_delete.cpp  find_one_and_delete.hpp  find_one_and_modify.hpp  find_one_and_replace.cpp  find_one_and_replace.hpp  find_one_and_update.cpp  find_one_and_update.hpp  insert.cpp  insert.hpp  ssl.cpp  ssl.hpp  update.cpp  update.hpp
src/driver/result/: bulk_write.cpp  bulk_write.hpp  delete.cpp  delete.hpp  insert_many.cpp  insert_many.hpp  insert_one.cpp  insert_one.hpp  replace_one.cpp  replace_one.hpp  (+3 more)
src/mongo/: SConscript  clienttest_main.cpp  integration_main.cpp  version.h.in
src/mongo/bson/: CMakeLists.txt  bson-inl.h  bson_db.h  bson_field.h  bson_validate.cpp  bson_validate.h  bsonelement.h  bsonmisc.h  bsonobj.h  bsonobjbuilder.h  bsonobjiterator.h  bsontypes.h  oid.h  optime.cpp  optime.h  ordering.h
src/mongo/bson/builder/: CMakeLists.txt  array.hpp  closed_ctx.hpp  concrete.cpp  concrete.hpp  document.hpp  forward_decls.hpp  helpers.hpp
src/mongo/bson/document/: CMakeLists.txt  element.cpp  element.hpp  view.hpp  view_or_value.hpp
src/mongo/bson/stdx/: CMakeLists.txt
src/mongo/bson/util/: CMakeLists.txt  bson_extract.cpp  bson_extract_test.cpp  builder.h
src/util/: mock.hpp
test/: collection.cpp
test/bson/: new_tests.cpp
(+140 files in other folders)
